# macro-toolset

./: Cargo.toml  README.md
benches/: hex_string.rs  rand_string.rs  str_concat.rs  string.rs  urlencoding.rs
src/: base64.rs  hash.rs  lib.rs  misc.rs  random.rs  string.rs  string_v2.rs
src/string/: base64.rs  externs.rs  general.rs  hex.rs  number.rs  rand.rs  slice_sep.rs  urlencoding.rs
src/string/general/: iterator.rs  string.rs  tuple.rs
src/string_v2/: base64.rs  externs.rs  general.rs  hex.rs  number.rs  rand.rs  urlencoding.rs
src/string_v2/general/: array.rs  iterator.rs  string.rs  tuple.rs
