[package]
name = "macro-toolset"
version = "0.3.0"
edition = "2021"
rust-version = "1.66"

# === Publication info ===
authors = ["Hantong Chen <cxwdyx620@gmail.com>"]
categories = ["development-tools"]
description = "Some useful macros"
keywords = ["macro", "string"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/cxw620/macro-toolset"

[dependencies]
# Dev
base64 = { version = "0.22", optional = true }
ryu = { version = "1.0", optional = true }

# Encryption
const-hex = { version = "1.13", optional = true, default-features = false }
foldhash = { version = "0.1", optional = true }

[dev-dependencies]
base64 = "0.22"
bytes = "1.8"
const-hex = "1.13"
criterion = "0.5"
md-5 = "0.10"
rand = "0.8"
sha2 = "0.10"

[features]
default = ["full"]

# Full features
full = [
    "macros-base64",
    "macros-hash",
    "macros-random-fast",
    "macros-string",
    "macros-string-ext-base64",
    "macros-string-ext-ryu",
]

# Base64 related
macros-base64 = []

# Hash related
macros-hash = ["dep:const-hex"]

# Random related
macros-random = []
macros-random-fast = ["macros-random", "dep:foldhash"]

# StringExt related
macros-string = ["dep:const-hex"]
macros-string-ext-base64 = ["dep:base64"]
macros-string-ext-ryu = ["dep:ryu"]

# === Benchmarks ===
[[bench]]
name = "string"
path = "benches/string.rs"
harness = false

# === Lints ===
[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[lints.clippy]
await_holding_lock = "warn"
dbg_macro = "warn"
doc_markdown = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
inefficient_to_string = "warn"
mem_forget = "warn"
mutex_integer = "warn"
needless_continue = "warn"
todo = "warn"
unimplemented = "warn"
wildcard_imports = "warn"
